--- a/try three/index.html
+++ b/try three/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script src="path/to/p5.sound.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 
     <title>This is an Elevator</title>
@@ -15,6 +16,7 @@
   <body>
     <h1>This is an Elevator</h1>
     <script src="./js/snowflakes.js"></script>
+    <script src="./js/powerup.js"></script>
     <script src="./js/obstacle.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/player.js"></script>
@@ -22,3 +24,5 @@
     <script src="./js/main.js"></script>
   </body>
 </html>
+
+
