--- a/try three/index.html
+++ b/try three/index.html
@@ -8,14 +8,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="path/to/p5.sound.js"></script>
+    <!-- <script src="path/to/p5.sound.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 
-    <title>This is an Elevator</title>
+    <title>Platformer</title>
   </head>
   <body>
-    <h1>This is an Elevator</h1>
+    <h1>Geometry Platform?</h1>
     <script src="./js/snowflakes.js"></script>
+    <script src="./js/particle.js"></script>
     <script src="./js/powerup.js"></script>
     <script src="./js/obstacle.js"></script>
     <script src="./js/background.js"></script>
